--- a/hiFiStyles/hiFiStyles.html
+++ b/hiFiStyles/hiFiStyles.html
@@ -41,7 +41,26 @@
 
             <h2>Brødtekst</h2>
 
+            <h3>Afsnit</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam modi alias deserunt odit ratione similique consequatur odio, beatae praesentium corporis voluptates, asperiores quisquam repellendus quibusdam facilis, dicta id excepturi incidunt!</p>
+
+            <h2>Farvede baggrunde med tekst</h2>
+
+            <h3>Class: .graes</h3>
+
+            <p class="graes">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum nisi possimus quisquam dolore odio, quibusdam ipsa. Rerum, saepe dicta corporis cupiditate optio nam corrupti illo quo iste ab laudantium odio!</p>
+
+            <h3>Class: .violet</h3>
+            <p class="violet">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus quibusdam illo corrupti expedita ratione alias, architecto dolore maiores aperiam sunt dolorem exercitationem illum odit atque, accusantium ipsam ad minima. At?</p>
+        
+            <h3>Class: .blaaGroen</h3>
+            <p class="blaaGroen">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta dolores explicabo itaque quas quam natus. Sunt omnis, quidem ullam molestias necessitatibus beatae quaerat dignissimos ut non eligendi officia debitis exercitationem!</p>
+        
+            <h3>Class: .moerk</h3>
+            <p class="moerk">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit repellat eos odit pariatur consequatur tempore accusamus minima culpa dolor hic omnis magni dolorum, quisquam veniam corporis eius cupiditate? Unde, explicabo.</p>
+
+            <h3>Class: .lys</h3>
+            <p class="lys">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati, esse cumque! Voluptatem et ipsum ipsa molestias natus nemo necessitatibus reiciendis, sunt doloribus dolor voluptate sapiente perspiciatis? Asperiores dolorem molestias porro.</p>
         </section>
         <section id="illustrationer">
             <aisde id="hero"></aisde>
