--- a/hiFiStyles/hiFiStyles.html
+++ b/hiFiStyles/hiFiStyles.html
@@ -48,7 +48,6 @@
             <h2>Designsystem: Landingpage</h2>
         </section>
 
-        <hr>
 
         <section id="farverne">
 
@@ -64,7 +63,6 @@
             </article>
         </section>
 
-        <hr>
 
         <section id="teksturer">
             <h2>Teksturer</h2>
@@ -73,7 +71,6 @@
 
         </section>
 
-        <hr>
 
         <!-- Fonte/skrifttyper-->
         <section id="fonts">
@@ -116,7 +113,6 @@
             <!-- fortsæt med farvekombinationer. Hvornår er farvekontrasten god? -->
         </section>
 
-        <hr>
 
         <!-- Hero sektioner -->
         <section id="illustrationer">
@@ -131,7 +127,6 @@
 
         </section>
 
-        <hr>
 
             <!-- Flexbox kolonner og tekster på farvet grund. Læg mærke til at man kan bruge flere klasser på et element. Klasser adskilles blot af et mellemrum. -->
             <section class="flex">
@@ -153,7 +148,7 @@
                 </aside>  
             </section>
 
-            <hr>
+
 
             <!-- Cards: overskrift, billede og CTA (call to action) knapper. -->
             <section id="cards">
@@ -208,7 +203,7 @@
                 </div>
             </section>
 
-            <hr>
+
 
             <!-- Flexbox II: "Stakken" - lægger "kasser" (container-elementer) med indhold i en bunke elementerne i en bunke.  -->
             <section id="cards">
@@ -261,7 +256,7 @@
                 </div>
             </section>
 
-            <hr>
+
 
             <!-- === Komponenter === -->
 
@@ -270,7 +265,7 @@
                 <p>Komponenter kan defineres som "designmønstre", der kan genbruges. Her er et par eksempler.</p>
             </section>
 
-            <hr>
+
 
             <!-- Komponent: Billede med overskrift og CTA -->
 
@@ -284,12 +279,12 @@
                 <h2>Komponent: Billede med CTA</h2>
                 <aside id="knapPaaBillede">
                     <div class="knap-centrer">
-                        <button class="graes">CTA</button>
+                        <button class="lys">CTA</button>
                     </div>
                 </aside>
             </section>
 
-            <hr>
+
 
             <!-- Komponent: billede og tekst -->
             <section>
@@ -306,7 +301,7 @@
                 </article>
             </section>
 
-            <hr>
+
         </section>
     </main>
 
