--- a/hiFiStyles/hiFiStyles.html
+++ b/hiFiStyles/hiFiStyles.html
@@ -110,20 +110,20 @@
             <!-- Tekst og baggrund: læsevenlige farvekontraster. -->
             <h2>Farvede baggrunde med tekst</h2>
 
-            <h3>Class: .graes</h3>
+            <h3>Class: graes</h3>
 
             <p class="graes">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum nisi possimus quisquam dolore odio, quibusdam ipsa. Rerum, saepe dicta corporis cupiditate optio nam corrupti illo quo iste ab laudantium odio!</p>
 
-            <h3>Class: .violet</h3>
+            <h3>Class: violet</h3>
             <p class="violet">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus quibusdam illo corrupti expedita ratione alias, architecto dolore maiores aperiam sunt dolorem exercitationem illum odit atque, accusantium ipsam ad minima. At?</p>
         
-            <h3>Class: .blaaGroen</h3>
+            <h3>Class: blaaGroen</h3>
             <p class="blaaGroen">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta dolores explicabo itaque quas quam natus. Sunt omnis, quidem ullam molestias necessitatibus beatae quaerat dignissimos ut non eligendi officia debitis exercitationem!</p>
         
-            <h3>Class: .moerk</h3>
+            <h3>Class: moerk</h3>
             <p class="moerk">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit repellat eos odit pariatur consequatur tempore accusamus minima culpa dolor hic omnis magni dolorum, quisquam veniam corporis eius cupiditate? Unde, explicabo.</p>
 
-            <h3>Class: .lys</h3>
+            <h3>Class: lys</h3>
             <p class="lys">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati, esse cumque! Voluptatem et ipsum ipsa molestias natus nemo necessitatibus reiciendis, sunt doloribus dolor voluptate sapiente perspiciatis? Asperiores dolorem molestias porro.</p>
 
             <!-- fortsæt med farvekombinationer. Hvornår er farvekontrasten god? -->
@@ -134,6 +134,7 @@
         <section id="illustrationer">
 
             <h2>Hero Image</h2>
+            <p>Class: hero</p>
             <p>Her mangler vi et godt dansk begreb. Heltebillede virker lidt oldnordisk. Hero images er store og går typisk i fuld bredde.</p>
 
             <!-- Herobilledet indsættes som baggrundsbillede i CSS, -->
